--- a/site/_variables.yml
+++ b/site/_variables.yml
@@ -13,7 +13,7 @@
 # Names of ValidMind products or core features
 
 # Long form
-# Rendered format: `{{< var validmind.platform >}}`
+# Rendered format: {{< var validmind.platform >}}, Added 2 new variables: {{< var validmind.releases >}}, {{< var validmind.Admin UI >}}
 validmind:
   platform: "ValidMind Platform"
   developer: "ValidMind Library"
@@ -22,6 +22,8 @@ validmind:
   api: "ValidMind Library Python API"
   legal: "ValidMind Inc."
   training: "ValidMind Academy"
+  release: "ValidMind Releases"
+  UI: "ValidMind Admin UI"
 
 # Short form
 # Rendered format: `{{< var vm.platform >}}`
