--- a/site/_variables.yml
+++ b/site/_variables.yml
@@ -22,8 +22,8 @@ validmind:
   api: "ValidMind Library Python API"
   legal: "ValidMind Inc."
   training: "ValidMind Academy"
-  release: "ValidMind Releases"
-  UI: "ValidMind Admin UI"
+  releases: "ValidMind Releases"
+  admin_ui: "ValidMind Admin UI"
 
 # Short form
 # Rendered format: `{{< var vm.platform >}}`
