--- a/site/_variables.yml
+++ b/site/_variables.yml
@@ -22,7 +22,7 @@ validmind:
   api: "ValidMind Library Python API"
   legal: "ValidMind Inc."
   training: "ValidMind Academy"
-  release: "ValidMind Releases"
+  customer-managed: "Customer-managed ValidMind"
   admin: "ValidMind Admin UI"
 
 # Short form
