Fixed footer links and Configurtion issue

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -312,10 +312,10 @@ website:
             <div class="footer-logo-columns">
               <div class="footer-logo-links">
                 <ul>
-                  <li><a href="/news">News</a></li>
-                  <li><a href="/careers">Careers</a></li>
-                  <li><a href="/contact">Contact</a></li>
-                  <li><a href="/legal">Legal</a></li>
+                  <li><a href="https://validmind.com/news/">News</a></li>
+                  <li><a href="https://validmind.com/careers/">Careers</a></li>
+                  <li><a href="https://validmind.com/contact/">Contact</a></li>
+                  <li><a href="https://validmind.com/legal/">Legal</a></li>
                 </ul>
               </div>
               <div class="footer-company-info">
@@ -331,19 +331,18 @@ website:
             <div class="footer-user-guides-columns">
               <ul class="footer-user-guides-column-1">
                 <li><a href="/get-started/get-started.qmd">Get started</a></li>
-                <li><a href="/guide/model-validation/manage-validation-guidelines.qmd">Onboarding</a></li>
-                <li><a href="/guide/guides.qmd">Model Inventory</a></li>
-                <li><a href="/releases/all-releases.qmd"><small>What's new?</small></a></li>
+                <li><a href="/guide/guides.qmd#configuration">Configuration</a></li>
+                <li><a href="/guide/guides.qmd#model-inventory">Model inventory</a></li>
               </ul>
               <ul class="footer-user-guides-column-2">
-                <li><a href="/guide/model-documentation/working-with-model-documentation.qmd">Model documentation</a></li>
-                <li><a href="/guide/model-validation/manage-validation-guidelines.qmd">Model validation</a></li>
-                <li><a href="/guide/model-workflows/working-with-model-workflows.qmd">Model workflows</a></li>
+                <li><a href="/guide/guides.qmd#model-documentation">Model documentation</a></li>
+                <li><a href="/guide/guides.qmd#model-validation">Model validation</a></li>
+                <li><a href="/guide/guides.qmd#model-workflows">Model workflows</a></li>
               </ul>
               <ul class="footer-user-guides-column-3">
-                <li><a href="/guide/reporting/working-with-analytics.qmd">Reporting</a></li>
-                <li><a href="/guide/monitoring/ongoing-monitoring.qmd">Monitoring</a></li>
-                <li><a href="/guide/attestation/working-with-attestations.qmd">Attestation</a></li>
+                <li><a href="/guide/guides.qmd#reporting">Reporting</a></li>
+                <li><a href="/guide/guides.qmd#monitoring">Monitoring</a></li>
+                <li><a href="/guide/guides.qmd#attestation">Attestation</a></li>
               </ul>
             </div>
           </div>
@@ -351,9 +350,9 @@ website:
           <div class="footer-section">
             <div class="footer-heading">Library</div>
             <ul>
-              <li><a href="/developer/validmind-library.qmd">For developers</a></li>
-              <li><a href="/developer/validmind-library.qmd#validation">For validators</a></li>
-              <li><a href="/developer/samples-jupyter-notebooks.qmd">Code samples</a></li>
+              <li><a href="/developer/validmind-library.qmd#for-model-development">For developers</a></li>
+              <li><a href="/developer/validmind-library.qmd#for-model-validation">For validators</a></li>
+              <li><a href="/developer/validmind-library.qmd#try-the-code-samples">Code samples</a></li>
               <li><a href="/validmind/validmind.qmd">API Reference</a></li>
             </ul>
           </div>
@@ -361,9 +360,9 @@ website:
           <div class="footer-section">
             <div class="footer-heading">Training</div>
             <ul>
-              <li><a href="/training/training.qmd">Learning paths</a></li>
-              <li><a href="/training/training.qmd">Courses</a></li>
-              <li><a href="/training/training.qmd">Videos</a></li>
+              <li><a href="/training/program/learning-paths.qmd">Learning paths</a></li>
+              <li><a href="/training/training.qmd#available-courses">Courses</a></li>
+              <li><a href="/training/training.qmd#available-videos">Videos</a></li>
             </ul>
           </div>
       - text: |
@@ -381,7 +380,7 @@ website:
             <ul>
               <li><a href="https://github.com/validmind/documentation">Github</a></li>
               <li><a href="https://validmind.com/blog/">Blog</a></li>
-              <li><a href="https://docs.validmind.ai/about/contributing/join-community.html" target="_blank">Slack</a></li>
+              <li><a href="/about/contributing/join-community.qmd" target="_blank">Slack</a></li>
             </ul>
           </div>
 
