chore: update access keys, distros, buckets for prod
The docs prod bucket has been moved to a non-root AWS account, and a new
cloudfront distribution has been created for it as well. This will
update the access keys, cloudfront distrubution ids, and bucket names in
the validation and deployment workflows to reflect these changes.

Signed-off-by: Cullen Taylor <cullen@eggshell.me>

--- a/.github/workflows/delete-pr-preview.yaml
+++ b/.github/workflows/delete-pr-preview.yaml
@@ -16,4 +16,4 @@ jobs:
         run: aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }} && aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }} && aws configure set default.region us-east-1
 
       - name: Delete PR preview
-        run: aws s3 rm s3://docs-ci-cd-demo/site/pr_previews/${{ github.head_ref }}/ --recursive && aws cloudfront create-invalidation --distribution-id E38AINJY5CYN6P --paths "/*" --no-cli-pager > /dev/null
+        run: aws s3 rm s3://validmind-docs-staging/site/pr_previews/${{ github.head_ref }}/ --recursive && aws cloudfront create-invalidation --distribution-id ESWVTZYFL873V --paths "/*" --no-cli-pager > /dev/null
