--- a/.github/workflows/lighthouse-check.yaml
+++ b/.github/workflows/lighthouse-check.yaml
@@ -7,7 +7,7 @@ on:
 permissions:
   issues: write
   pull-requests: write
-  
+
 env:
   # To change the default depth level:
   # 0 — Top-level navigation only (e.g. /index.html, /guide/guides.html, /developer/validmind-library.html, etc.)
@@ -33,7 +33,7 @@ jobs:
     - name: Set PR preview URL
       id: set_url
       run: |
-        echo "PREVIEW_URL=https://docs-demo.vm.validmind.ai/pr_previews/${{ github.head_ref }}" >> $GITHUB_ENV
+        echo "PREVIEW_URL=https://docs-staging.validmind.ai/pr_previews/${{ github.head_ref }}" >> $GITHUB_ENV
         echo "DEPTH=${{ env.DEFAULT_DEPTH }}" >> $GITHUB_ENV
 
     - name: Check for PR preview URL and sitemap
@@ -52,7 +52,7 @@ jobs:
             echo "Info: Preview site is now available"
             break
           fi
-          
+
           if [ $i -eq 60 ]; then
             echo "Error: Preview URL did not become available after 60 minutes at $PREVIEW_URL/index.html"
             exit 1
@@ -70,7 +70,7 @@ jobs:
 
         # Check if installation page is accessible with auth
         echo "Debug: Checking installation page with URL-based auth..."
-        auth_url="https://${{ secrets.INSTALLATION_USER }}:${{ secrets.INSTALLATION_PW }}@docs-demo.vm.validmind.ai/pr_previews/${{ github.head_ref }}/installation/index.html"
+        auth_url="https://${{ secrets.INSTALLATION_USER }}:${{ secrets.INSTALLATION_PW }}@docs-staging.validmind.ai/pr_previews/${{ github.head_ref }}/installation/index.html"
         if ! curl -v --head --silent --fail --anyauth "$auth_url" 2>&1; then
           echo "Error: Installation page is not accessible with authentication at $auth_url"
           exit 1
