Setup for managing validation

--- a/site/guide/_sidebar.yaml
+++ b/site/guide/_sidebar.yaml
@@ -78,7 +78,10 @@ website:
           - guide/model-documentation/submit-for-approval.qmd
         - text: "---"
         - text: "Model Validation"
-        - guide/model-validation/manage-validation-guidelines.qmd
+        - file: guide/model-validation/managing-model-validation.qmd
+          contents:
+          - guide/model-validation/manage-validation-guidelines.qmd
+          - guide/model-validation/manage-finding-statuses.qmd
         - file: guide/model-validation/preparing-validation-reports.qmd
           contents:
           - guide/model-validation/review-model-documentation.qmd
