--- a/site/_variables.yml
+++ b/site/_variables.yml
@@ -13,7 +13,7 @@
 # Names of ValidMind products or core features
 
 # Long form
-# Rendered format: {{< var validmind.platform >}}, Added 2 new variables: {{< var validmind.releases >}}, {{< var validmind.Admin UI >}}
+# Rendered format: {{< var validmind.platform >}}
 validmind:
   platform: "ValidMind Platform"
   developer: "ValidMind Library"
