--- a/.github/workflows/validate-docs-site.yaml
+++ b/.github/workflows/validate-docs-site.yaml
@@ -17,11 +17,18 @@ jobs:
     - name: Check out repository
       uses: actions/checkout@v2
 
-    - name: "Checkout documentation repository"
+    - name: Check out installation repository
       uses: actions/checkout@v4
       with:
         repository: validmind/installation
         path: site/_source/installation
+        token: ${{ secrets.INSTALLATION_RO_PAT }}
+
+    - name: Check out release-notes repository
+      uses: actions/checkout@v4
+      with:
+        repository: validmind/release-notes
+        path: site/_source/release-notes
         token: ${{ secrets.INSTALLATION_RO_PAT }}
 
     - name: Set up Python 3.11
@@ -37,6 +44,13 @@ jobs:
 
     - name: Populate installation
       run: cp -r site/_source/installation/site/installation site/installation
+
+    - name: Populate release notes
+      run: |
+        cp -r site/_source/release-notes/releases/validmind-library site/releases/validmind-library
+        cp -r site/_source/release-notes/releases/frontend site/releases/frontend
+        cp -r site/_source/release-notes/releases/documentation site/releases/documentation
+        cp -r site/_source/release-notes/releases/cmvm site/installation/releases
 
     - name: Render demo docs site
       run: |
