--- a/.github/workflows/deploy-docs-staging.yaml
+++ b/.github/workflows/deploy-docs-staging.yaml
@@ -34,7 +34,7 @@ jobs:
         with:
           repository: validmind/release-notes
           path: site/_source/release-notes
-          token: ${{ secrets.INSTALLATION_RO_PAT }}
+          token: ${{ secrets.RELEASE_NOTES_RO_PAT }}
 
       - name: Set up Python 3.11
         uses: actions/setup-python@v5
