Update Makefile for release notes

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@ release-scripts/__pycache__
 # Installation source tracked in private repository
 site/installation
 
+# Release notes source tracked in private repository
+site/releases/validmind-library
+site/releases/frontend
+site/releases/documentation
