--- a/.github/workflows/lighthouse-check.yaml
+++ b/.github/workflows/lighthouse-check.yaml
@@ -36,48 +36,51 @@ jobs:
         echo "PREVIEW_URL=https://docs-staging.validmind.ai/pr_previews/${{ github.head_ref }}" >> $GITHUB_ENV
         echo "DEPTH=${{ env.DEFAULT_DEPTH }}" >> $GITHUB_ENV
 
-    - name: Check for PR preview URL and sitemap
-      id: check_preview
-      run: |
-        # Function to check if URL exists
-        check_url() {
-          curl --head --silent --fail "$1" > /dev/null
-          return $?
-        }
-
-        # Wait for preview URL to be available (up to 60 minutes)
-        echo "Waiting for preview site to become available ..."
-        for i in {1..60}; do
-          if check_url "$PREVIEW_URL/index.html"; then
-            echo "Info: Preview site is now available"
-            break
-          fi
-
-          if [ $i -eq 60 ]; then
-            echo "Error: Preview URL did not become available after 60 minutes at $PREVIEW_URL/index.html"
+        - name: Check for PR preview URL and sitemap
+        id: check_preview
+        run: |
+          # Function to check if URL returns HTTP 200
+          check_url() {
+            local url=$1
+            local status
+            status=$(curl -s -o /dev/null -w "%{http_code}" -I -A "Mozilla/5.0" "$url")
+            echo "Checking $url — status: $status"
+            [ "$status" -eq 200 ]
+          }
+      
+          echo "Waiting for preview site to become available ..."
+          for i in {1..60}; do
+            if check_url "$PREVIEW_URL/index.html"; then
+              echo "Info: Preview site is now available"
+              break
+            fi
+      
+            if [ $i -eq 60 ]; then
+              echo "Error: Preview URL did not become available after 60 minutes at $PREVIEW_URL/index.html"
+              exit 1
+            fi
+      
+            echo "Attempt $i/60: Preview site not ready yet, waiting 1 minute..."
+            sleep 60
+          done
+      
+          if ! check_url "$PREVIEW_URL/sitemap.xml"; then
+            echo "Error: Sitemap does not exist at $PREVIEW_URL/sitemap.xml"
             exit 1
           fi
-          
-          echo "Attempt $i/60: Preview site not ready yet, waiting 1 minute..."
-          sleep 60
-        done
-        
-        # Now check for sitemap
-        if ! check_url "$PREVIEW_URL/sitemap.xml"; then
-          echo "Error: Sitemap does not exist at $PREVIEW_URL/sitemap.xml"
-          exit 1
-        fi
-
-        # Check if installation page is accessible with auth
-        echo "Debug: Checking installation page with URL-based auth..."
-        auth_url="https://${{ secrets.INSTALLATION_USER }}:${{ secrets.INSTALLATION_PW }}@docs-staging.validmind.ai/pr_previews/${{ github.head_ref }}/installation/index.html"
-        if ! curl -v --head --silent --fail --anyauth "$auth_url" 2>&1; then
-          echo "Error: Installation page is not accessible with authentication at $auth_url"
-          exit 1
-        fi
-        echo "Info: Successfully accessed password-protected installation page"
-        
-        echo "preview_exists=true" >> $GITHUB_OUTPUT
+      
+          echo "Debug: Checking installation page with URL-based auth..."
+          auth_url="https://${{ secrets.INSTALLATION_USER }}:${{ secrets.INSTALLATION_PW }}@docs-staging.validmind.ai/pr_previews/${{ github.head_ref }}/installation/index.html"
+          status=$(curl -s -o /dev/null -w "%{http_code}" -I -A "Mozilla/5.0" --anyauth "$auth_url")
+          echo "Checking $auth_url — status: $status"
+          if [ "$status" -ne 200 ]; then
+            echo "Error: Installation page is not accessible with authentication at $auth_url"
+            exit 1
+          fi
+      
+          echo "Info: Successfully accessed password-protected installation page"
+      
+          echo "preview_exists=true" >> $GITHUB_OUTPUT
 
     - name: Install Lighthouse CI
       if: steps.check_preview.outputs.preview_exists == 'true'
