Try the official Quarto action

--- a/.github/workflows/validate-docs-site.yaml
+++ b/.github/workflows/validate-docs-site.yaml
@@ -36,8 +36,8 @@ jobs:
       with:
         python-version: '3.11'
 
-    - name: Fetch Quarto
-      uses: ./.github/actions/fetch-quarto
+    - name: Set up Quarto
+      uses: quarto-dev/quarto-actions/setup@v2
 
     - name: Setup R environment
       uses: ./.github/actions/setup-r
