Add release notes to docs site deploy workflows (#814)
* Remove locally stored files from release-notes repo

* Add missing installation repo steps to staging deploy

* Add release notes to workflows

* Change token for release-notes repo step

* Update Makefile for release notes

* Make Lighthouse preview URL check more robust

* Fix indentation

* Try the official Quarto action

* Switch all workflows over to official Quarto action and remove old action

--- a/.github/workflows/deploy-docs-staging.yaml
+++ b/.github/workflows/deploy-docs-staging.yaml
@@ -19,20 +19,44 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check out repository
+      - name: Check out installation repository
         uses: actions/checkout@v2
+
+      - name: "Checkout documentation repository"
+        uses: actions/checkout@v4
+        with:
+          repository: validmind/installation
+          path: site/_source/installation
+          token: ${{ secrets.INSTALLATION_RO_PAT }}
+
+      - name: Check out release-notes repository
+        uses: actions/checkout@v4
+        with:
+          repository: validmind/release-notes
+          path: site/_source/release-notes
+          token: ${{ secrets.RELEASE_NOTES_RO_PAT }}
 
       - name: Set up Python 3.11
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
   
-      - name: Fetch Quarto
-        uses: ./.github/actions/fetch-quarto
+      - name: Set up Quarto
+        uses: quarto-dev/quarto-actions/setup@v2
 
       - name: Setup R environment
         uses: ./.github/actions/setup-r
   
+      - name: Populate installation
+        run: cp -r site/_source/installation/site/installation site/installation
+
+      - name: Populate release notes
+        run: |
+          cp -r site/_source/release-notes/releases/validmind-library site/releases/validmind-library
+          cp -r site/_source/release-notes/releases/frontend site/releases/frontend
+          cp -r site/_source/release-notes/releases/documentation site/releases/documentation
+          cp -r site/_source/release-notes/releases/cmvm site/installation/releases
+
       - name: Render staging docs site
         run: |
             cd site
