Remove all but legal company links

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -310,17 +310,10 @@ website:
           <div class="footer-section footer-logo-info">
             <img src="/assets/home-page/ValidMind%20MASTER%20Brand%20Assets_Logo-White%20R%202.svg" alt="ValidMind Logo" class="footer-logo" />
             <div class="footer-logo-columns">
-              <div class="footer-logo-links">
-                <ul>
-                  <li><a href="https://validmind.com/news/">News</a></li>
-                  <li><a href="https://validmind.com/careers/">Careers</a></li>
-                  <li><a href="https://validmind.com/contact/">Contact</a></li>
-                  <li><a href="https://validmind.com/legal/">Legal</a></li>
-                </ul>
-              </div>
               <div class="footer-company-info">
-                <div>© Copyright {{< now year >}} ValidMind Inc.<br>All Rights Reserved.</div>
+                © Copyright {{< now year >}} ValidMind Inc.<br>All Rights Reserved.
                 <a id="open_preferences_center" class="cookie-preferences-link" href="#">Cookie preferences</a>
+                <br><a href="https://validmind.com/legal/">Legal</a>
               </div>
             </div>
           </div>
