Alignment tweaks for company section of footer, and add link to validmind.com to logo

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -308,12 +308,16 @@ website:
     left:
       - text: |
           <div class="footer-section footer-logo-info">
-            <img src="/assets/home-page/ValidMind%20MASTER%20Brand%20Assets_Logo-White%20R%202.svg" alt="ValidMind Logo" class="footer-logo" />
-            <div class="footer-logo-columns">
+            <a href="https://validmind.com" target="_blank" rel="noopener" class="footer-logo-link">
+              <img src="/assets/home-page/ValidMind%20MASTER%20Brand%20Assets_Logo-White%20R%202.svg" alt="ValidMind Logo" class="footer-logo" />
+            </a>
+            <div class="footer-logo-column">
+              <div>©</div>
               <div class="footer-company-info">
-                © Copyright {{< now year >}} ValidMind Inc.<br>All Rights Reserved.
+                Copyright {{< now year >}} ValidMind Inc.<br>All Rights Reserved.
                 <a id="open_preferences_center" class="cookie-preferences-link" href="#">Cookie preferences</a>
-                <br><a href="https://validmind.com/legal/">Legal</a>
+                <br>
+                <a href="https://validmind.com/legal/" class="footer-company-legal">Legal</a>
               </div>
             </div>
           </div>
@@ -371,11 +375,12 @@ website:
           <div class="footer-section">
             <div class="footer-heading">Community</div>
             <ul>
+              <li><a href="/about/contributing/join-community.qmd" target="_blank">Slack</a></li>
               <li><a href="https://github.com/validmind/documentation">Github</a></li>
               <li><a href="https://validmind.com/blog/">Blog</a></li>
-              <li><a href="/about/contributing/join-community.qmd" target="_blank">Slack</a></li>
             </ul>
           </div>
+    right: |
 
 format:
   html:
