Fix responsive behaviour of cookie preferences & legal links and clean up more CSS

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -314,10 +314,10 @@ website:
             <div class="footer-logo-column">
               <div>©</div>
               <div class="footer-company-info">
-                Copyright {{< now year >}} ValidMind Inc.<br>All Rights Reserved.
-                <a id="open_preferences_center" class="cookie-preferences-link" href="#">Cookie preferences</a>
-                <br>
-                <a href="https://validmind.com/legal/" class="footer-company-legal">Legal</a>
+                <div>Copyright {{< now year >}} ValidMind Inc.</div>
+                <div>All Rights Reserved.</div>
+                <div><a id="open_preferences_center" class="cookie-preferences-link" href="#">Cookie preferences</a></div>
+                <div><a href="https://validmind.com/legal/" class="footer-company-legal external" target="_blank" rel="noopener">Legal</a></div>
               </div>
             </div>
           </div>
