Add topic to sidebar, add some notes

--- a/site/guide/_sidebar.yaml
+++ b/site/guide/_sidebar.yaml
@@ -107,6 +107,7 @@ website:
         - file: guide/monitoring/ongoing-monitoring.qmd
           contents:
           - guide/monitoring/enable-monitoring.qmd
+          - guide/monitoring/set-thresholds-and-alerts.qmd
           - guide/monitoring/review-monitoring-results.qmd
           - text: "Metrics over time"
             file: guide/monitoring/work-with-metrics-over-time.qmd
