--- a/site/Makefile
+++ b/site/Makefile
@@ -129,7 +129,7 @@ deploy-staging:
 	else \
 		echo "\nDeploying staging site ..."; \
 		cp -r $(SRC_ROOT)/installation/site/installation installation
-		quarto render --profile staging && aws s3 sync ./_site s3://docs-ci-cd-staging/site/ --delete --exclude "installation/helm-repo/*" && aws cloudfront create-invalidation --distribution-id E2FB73KGY63MV6 --paths "/*" --no-cli-pager > /dev/null; \
+		quarto render --profile staging && aws s3 sync ./_site s3://docs-ci-cd-staging/site/ --delete --exclude "installation/helm-repo/*" --exclude "site/pr_previews/*" && aws cloudfront create-invalidation --distribution-id E2FB73KGY63MV6 --paths "/*" --no-cli-pager > /dev/null; \
 	fi
 
 docker-build: docker-site-lite
