--- a/site/guide/_sidebar.yaml
+++ b/site/guide/_sidebar.yaml
@@ -81,6 +81,7 @@ website:
         - file: guide/model-validation/managing-model-validation.qmd
           contents:
           - guide/model-validation/manage-validation-guidelines.qmd
+          - guide/model-validation/manage-model-finding-fields.qmd
           - guide/model-validation/manage-finding-statuses.qmd
         - file: guide/model-validation/preparing-validation-reports.qmd
           contents:
