Documentation for monitoring thresholds and alert notifications (#824)
* Add initial thresholds and alerts content for discussion with Juan

* Add topic to sidebar, add some notes

* Add new images from Juan

* Split out code samples into their own section and update images

* Add new examples section that explain new images

* Update alert notifications section and remove notes to self

* Rework the new threshold and alerts topic, other edits

* Edits

* Fix fig-alt text

--- a/site/guide/_sidebar.yaml
+++ b/site/guide/_sidebar.yaml
@@ -108,8 +108,8 @@ website:
           contents:
           - guide/monitoring/enable-monitoring.qmd
           - guide/monitoring/review-monitoring-results.qmd
-          - text: "Metrics over time"
-            file: guide/monitoring/work-with-metrics-over-time.qmd
+          - guide/monitoring/work-with-metrics-over-time.qmd
+          - guide/monitoring/set-thresholds-and-alerts.qmd
         - text: "---"
         - text: "Attestation"
         - file: guide/attestation/working-with-attestations.qmd
