recent changes, connected the page

--- a/site/guide/_sidebar.yaml
+++ b/site/guide/_sidebar.yaml
@@ -74,6 +74,7 @@ website:
           - guide/model-documentation/work-with-test-results.qmd
           - text: "Assign section statuses"
             file: guide/model-documentation/assign-documentation-section-statuses.qmd
+          - guide/model-documentation/Documentchecker.qmd
           - guide/model-documentation/collaborate-with-others.qmd
           - guide/model-documentation/submit-for-approval.qmd
         - text: "---"
