--- a/site/_variables.yml
+++ b/site/_variables.yml
@@ -22,8 +22,10 @@ validmind:
   api: "ValidMind Library Python API"
   legal: "ValidMind Inc."
   training: "ValidMind Academy"
-  customer: "Customer-managed ValidMind"
+  customer: "Customer Managed ValidMind"
   admin: "ValidMind Admin UI"
+
+
 
 # Short form
 # Rendered format: `{{< var vm.platform >}}`
@@ -32,6 +34,8 @@ vm:
   developer: "library"
   product: "&#8203;ValidMind" # DO NOT REMOVE &#8203; — WORKAROUND FOR QUARTO VARIABLE RESOLUTION ISSUE
   api: "Python API"
+  customer: "CMVM"
+  admin: "Admin UI"
 
 # PRODUCT URLS
 # Links to ValidMind hosted web applications
@@ -81,3 +85,4 @@ version:
 
 api:
   host: "https://API_HOST.validmind.ai/api/v1"
+
