Create new variable for Product name (#796)
* recent changes

* Update site/_variables.yml

Co-authored-by: Beck <164545837+validbeck@users.noreply.github.com>

* recent changes

* recent changes

* recent changes

* recent changes

* recent changes

* recent changes

* recent changes

* Update site/_variables.yml

Co-authored-by: Beck <164545837+validbeck@users.noreply.github.com>

* recent changes

* recent changes

* changes

* changes

* Update site/_variables.yml

Co-authored-by: Beck <164545837+validbeck@users.noreply.github.com>

* added short form

* Update site/_variables.yml

Co-authored-by: Beck <164545837+validbeck@users.noreply.github.com>

* Update site/_variables.yml

Co-authored-by: Beck <164545837+validbeck@users.noreply.github.com>

---------

Co-authored-by: Beck <164545837+validbeck@users.noreply.github.com>

--- a/site/_variables.yml
+++ b/site/_variables.yml
@@ -22,6 +22,10 @@ validmind:
   api: "ValidMind Library Python API"
   legal: "ValidMind Inc."
   training: "ValidMind Academy"
+  customer: "Customer-managed ValidMind"
+  admin: "ValidMind Admin UI"
+
+
 
 # Short form
 # Rendered format: `{{< var vm.platform >}}`
@@ -30,6 +34,8 @@ vm:
   developer: "library"
   product: "&#8203;ValidMind" # DO NOT REMOVE &#8203; — WORKAROUND FOR QUARTO VARIABLE RESOLUTION ISSUE
   api: "Python API"
+  customer: "CMVM"
+  admin: "admin UI"
 
 # PRODUCT URLS
 # Links to ValidMind hosted web applications
@@ -79,3 +85,4 @@ version:
 
 api:
   host: "https://API_HOST.validmind.ai/api/v1"
+
