Add highlights topic, add release listing to index page, point product tour to demo request

--- a/site/releases/_sidebar.yaml
+++ b/site/releases/_sidebar.yaml
@@ -4,7 +4,7 @@ website:
       title: "Releases"
       contents:
         - releases/all-releases.qmd
-        - releases/highlights.qmd#category=highlight
+        - releases/highlights.qmd
         - releases/validmind-library-releases.qmd
         - releases/validmind-platform-releases.qmd
         - releases/documentation-releases.qmd
