--- a/.github/workflows/release_notes_check.yaml
+++ b/.github/workflows/release_notes_check.yaml
@@ -29,3 +29,35 @@ jobs:
         run: python .github/scripts/release_notes_check.py ${{ github.event.pull_request.html_url }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+name: Release notes check
+
+on:
+  pull_request:
+    types: [opened, synchronize, labeled, unlabeled, edited, ready_for_review]
+
+permissions:
+  contents: readz
+  pull-requests: read
+
+jobs:
+  ci_check:
+    runs-on: ubuntu-latest
+    if: github.event.pull_request.draft == false
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.9"
+
+      - name: Install dependencies
+        run: pip install PyGithub pyyaml
+
+      - name: Run CI Check
+        run: python .github/scripts/release_notes_check.py ${{ github.event.pull_request.html_url }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
