--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -3,7 +3,6 @@ project:
 
 metadata-files:
   - get-started/_sidebar.yaml
-  - guide/_sidebar.yaml
   - developer/_sidebar.yaml
   - training/_sidebar.yaml
   - validmind/_sidebar.yml
@@ -12,13 +11,14 @@ metadata-files:
 
 website:
   announcement: 
-    content: "[**{{< fa book-open-reader >}} EU AI Act Compliance**](https://validmind.com/download-whitepaper-the-eu-ai-act/) — Read our original regulation brief on how the EU AI Act aims to balance innovation with safety and accountability, setting standards for responsible AI use" 
-    position: below-navbar 
-  favicon: favicon.svg
+    content: '[**{{< fa book-open-reader >}} EU AI Act Compliance**](https://validmind.com/download-whitepaper-the-eu-ai-act/) — Read our original regulation brief on how the EU AI Act aims to balance innovation with safety and accountability, setting standards for responsible AI use'
+    position: above-navbar 
+  favicon: validmind.png
   title: "ValidMind"
   cookie-consent:
     type: express
     style: simple
+    position: center
   google-analytics: 
     tracking-id: "G-S46CKWPNSS"
     anonymize-ip: true
@@ -27,7 +27,7 @@ website:
   repo-url: https://github.com/validmind/documentation/
   repo-subdir: site/
   repo-actions: [edit, issue]
-
+  
   navbar:
     collapse-below: xl
     logo: logo.svg
@@ -35,58 +35,12 @@ website:
     title: false
     pinned: true
 
-    left:
-      - text: "About"
-        file: about/overview.qmd
-      - text: "Get Started"
-        file: get-started/get-started.qmd
-      - text: "Guides"
-        file: guide/guides.qmd
-      - text: "{{< fa cube >}} {{< var validmind.developer >}}"
-        menu:
-        - text: "{{< fa laptop-code >}} {{< var validmind.developer >}}"
-          file: developer/validmind-library.qmd
-        - text: "{{< fa cubes >}} Supported Models"
-          file: developer/supported-models.qmd
-        - text: "---"
-        - text:  "{{< fa rocket >}} QUICKSTART"
-        - text: "{{< fa file-pen >}} For Model Documentation"
-          file: notebooks/quickstart/quickstart_model_documentation.ipynb
-        - text: "{{< fa clipboard-check >}} For Model Validation"
-          file: notebooks/quickstart/quickstart_model_validation.ipynb
-        - text: "---"
-        - text:  "{{< fa vial >}} TESTING"
-        - text: "{{< fa flask-vial >}} Run Tests & Test Suites"
-          file: developer/model-testing/testing-overview.qmd
-        - text: "{{< fa microscope >}} Test Descriptions"
-          file: developer/model-testing/test-descriptions.qmd
-        - text: "{{< fa toolbox >}} Test Sandbox (BETA)"
-          file: developer/model-testing/test-sandbox.qmd
-        - text: "---"
-        - text: "{{< fa code >}} CODE SAMPLES"
-        - text: "{{< fa book-open-reader >}} All Code Samples · `LLM` · `NLP` · `Time Series` · `Etc.`"
-          file: developer/samples-jupyter-notebooks.qmd
-        - text: "{{< fa download >}} Download Code Samples · `notebooks.zip`"
-          file: notebooks.zip
-        - text: "{{< fa hand-point-right >}} Try it on JupyterHub {{< fa hand-point-left >}}"
-          file: https://jupyterhub.validmind.ai/
-        - text: "---"
-        - text: "{{< fa book >}} REFERENCE"
-        - text: "{{< var validmind.api >}}"
-          file: validmind/validmind.qmd
-      - text: "Support"
-        file: support/support.qmd
-      - text: "Training"
-        file: training/training.qmd
-      - text: "Releases"
-        file: releases/all-releases.qmd
-      # - text: "validmind.com {{< fa external-link >}}"
-      #   file: https://validmind.com/
-      #   target: _blank
     right:
+      # - text: "{{< fa cube >}} Documentation"
+      #   file: about/overview.qmd
       # HOME BUTTON FOR DEVELOPER & TRAINING SECTIONS
-      - text: "{{< fa house >}}"
-        file: index.qmd
+      # - text: "{{< fa house >}}"
+      #   file: index.qmd
       # DOCUMENTATION MENU FOR DEVELOPER & TRAINING SECTIONS
       - text: "{{< fa book-open >}} Documentation"
         menu:
@@ -125,6 +79,28 @@ website:
       #     file: training/developer-fundamentals/developer-fundamentals-register.qmd
       #   - text: "{{< fa user-check >}} For Validators"
       #     file: training/validator-fundamentals/validator-fundamentals-register.qmd
+
+      - text: "{{< fa book-open >}} Documentation"
+        menu:
+        - text: "{{< fa circle-info >}} About {{< var vm.product >}}"
+          file: about/overview.qmd
+        - text: "{{< fa rocket >}} Get Started"
+          file: get-started/get-started.qmd
+        - text: "{{< fa book >}} Guides"
+          file: guide/guides.qmd
+        - text: "{{< fa envelope-open-text >}} Support"
+          file: support/support.qmd
+        - text: "{{< fa bullhorn >}} Releases"
+          file: releases/all-releases.qmd
+        - text: "---"
+        - text:  "{{< fa cube >}} Python Library"
+        - text: "{{< fa code >}} {{< var validmind.developer >}}"
+          file: developer/validmind-library.qmd
+        - text: "---"
+        - text:  "{{< fa graduation-cap >}} {{< var validmind.training >}}"
+        - text: "{{< fa building-columns >}} Training Courses"
+          file: training/training.qmd
+
       - text: "Log In"
         menu:
           - text: "Public Internet"
@@ -141,6 +117,7 @@ website:
           - text: "---"
           - text: "<small>Which login should I use?</small>"
             href: "guide/configuration/log-in-to-validmind.qmd"
+        
 
 #  COMMENT THIS OUT WHEN DONE TESTING
       # - text: "{{< fa flask >}} Testing"
@@ -184,6 +161,113 @@ website:
         - text: "Software license agreement"
           file: about/fine-print/license-agreement.qmd
 
+    - title: "Guides"
+      contents:
+        - guide/guides.qmd
+        - text: "---"
+        - text: "Setup + Administration"
+        - file: guide/configuration/accessing-validmind.qmd
+          contents:
+            - guide/configuration/register-with-validmind.qmd
+            - guide/configuration/log-in-to-validmind.qmd
+        - file: guide/configuration/managing-your-organization.qmd
+          contents:
+            - guide/configuration/set-up-your-organization.qmd
+            - guide/configuration/configure-aws-privatelink.qmd
+            - guide/configuration/configure-google-private-service-connect.qmd
+            - guide/configuration/configure-azure-private-link.qmd
+        - file: guide/configuration/managing-users.qmd
+          contents:
+          - guide/configuration/manage-users.qmd
+          - guide/configuration/manage-groups.qmd
+          - guide/configuration/manage-roles.qmd
+          - guide/configuration/manage-model-stakeholder-types.qmd
+          - guide/configuration/manage-permissions.qmd
+        - file: guide/configuration/personalize-validmind.qmd
+          contents:
+          - guide/configuration/manage-your-profile.qmd
+          - guide/configuration/customize-your-dashboard.qmd
+        - text: "---"
+        - text: "Model Workflows"
+        - text: "Working with workflows"
+          file: guide/model-workflows/working-with-model-workflows.qmd
+          contents:
+          - text: "Customize lifecycle statuses"
+            file: guide/model-workflows/manage-model-stages.qmd
+          - text: "Set up workflows"
+            file: guide/model-workflows/configure-model-workflows.qmd
+        - text: "---"
+        - text: "Model Inventory"
+        - file: guide/model-inventory/working-with-model-inventory.qmd
+          contents:
+          - guide/model-inventory/register-models-in-inventory.qmd
+          - guide/model-inventory/customize-model-inventory-layout.qmd
+          - guide/model-inventory/edit-model-inventory-fields.qmd
+          - guide/model-inventory/customize-model-overview-page.qmd
+        - file: guide/model-inventory/managing-model-inventory.qmd
+          contents:
+          - guide/model-inventory/configure-model-interdependencies.qmd
+          - guide/model-inventory/manage-model-inventory-fields.qmd
+          - guide/model-inventory/archive-delete-models.qmd
+        - guide/model-inventory/view-model-activity.qmd
+        - text: "---"
+        - text: "Templates"
+        - file: guide/templates/working-with-templates.qmd
+          contents:
+          - guide/templates/view-documentation-templates.qmd
+          - guide/templates/customize-documentation-templates.qmd
+          - guide/templates/swap-documentation-templates.qmd
+        - guide/templates/manage-text-block-library.qmd
+        - text: "---"
+        - text: "Model Documentation"
+        - file: guide/model-documentation/working-with-model-documentation.qmd
+          contents:
+          - guide/model-documentation/view-documentation-guidelines.qmd
+          - guide/model-documentation/work-with-content-blocks.qmd
+          - guide/model-documentation/work-with-test-results.qmd
+          - text: "Assign section statuses"
+            file: guide/model-documentation/assign-documentation-section-statuses.qmd
+          - guide/model-documentation/collaborate-with-others.qmd
+          - guide/model-documentation/submit-for-approval.qmd
+        - text: "---"
+        - text: "Model Validation"
+        - guide/model-validation/manage-validation-guidelines.qmd
+        - file: guide/model-validation/preparing-validation-reports.qmd
+          contents:
+          - guide/model-validation/review-model-documentation.qmd
+          - guide/model-validation/assess-compliance.qmd
+          - guide/model-documentation/work-with-content-blocks.qmd
+          - guide/model-documentation/collaborate-with-others.qmd
+          - guide/model-documentation/submit-for-approval.qmd
+        - file: guide/model-validation/working-with-model-findings.qmd
+          contents:
+          - text: "View and filter findings"
+            file: guide/model-validation/view-filter-model-findings.qmd
+          - text: "Add and manage findings"
+            file: guide/model-validation/add-manage-model-findings.qmd
+        - text: "---"
+        - text: "Reporting"
+        - file: guide/reporting/working-with-analytics.qmd
+          contents:
+          - guide/reporting/view-report-data.qmd
+          - guide/reporting/manage-custom-reports.qmd
+        - guide/reporting/export-documentation.qmd
+        - text: "---"
+        - text: "Monitoring"
+        - file: guide/monitoring/ongoing-monitoring.qmd
+          contents:
+          - guide/monitoring/enable-monitoring.qmd
+          - guide/monitoring/review-monitoring-results.qmd
+          - text: "Metrics over time"
+            file: guide/monitoring/work-with-metrics-over-time.qmd
+        - text: "---"
+        - text: "Attestation"
+        - file: guide/attestation/working-with-attestations.qmd
+          contents:
+          - guide/attestation/set-up-attestations.qmd
+          - guide/attestation/complete-attestation-questionnaires.qmd
+          - guide/attestation/review-attestation-questionnaires.qmd
+
     - title: "Support"
       contents:
         - support/support.qmd
@@ -215,38 +299,100 @@ website:
     #     - text: "---"
     #     - text: "EXPERIMENTS"
     #     - file: internal/lightbox.qmd
-        # - file: internal/footnotes/footnotes.qmd
-        #   contents:
-        #     - internal/footnotes/hover-only.qmd
+    #     - file: internal/footnotes/footnotes.qmd
+    #       contents:
+    #         - internal/footnotes/hover-only.qmd
 
   page-footer:
-    background: "#DE257E"
-    left: "© Copyright {{< now year >}} {{< var validmind.legal >}}  All Rights Reserved."
-    right:
-      - text: "validmind.com {{< fa external-link >}}"
-        href: https://validmind.com/
-        target: _blank
-      - text: "Privacy Policy"
-        href: https://validmind.com/about/legal/privacy-policy/
-      - text: "Terms of Use"
-        href: https://validmind.com/about/legal/terms-of-use/
-      - icon: github
-        href: https://github.com/validmind/documentation
-      - icon: linkedin
-        href: https://www.linkedin.com/company/validmind/
+    background: "#26818B"
+    left:
+      - text: |
+          <div class="footer-section footer-logo-info">
+            <a href="https://validmind.com" target="_blank" rel="noopener" class="footer-logo-link">
+              <img src="/assets/home-page/ValidMind%20MASTER%20Brand%20Assets_Logo-White%20R%202.svg" alt="ValidMind Logo" class="footer-logo" />
+            </a>
+            <div class="footer-logo-column">
+              <div>©</div>
+              <div class="footer-company-info">
+                <div>Copyright {{< now year >}} ValidMind Inc.</div>
+                <div>All Rights Reserved.</div>
+                <div><a id="open_preferences_center" class="cookie-preferences-link" href="#">Cookie preferences</a></div>
+                <div><a href="https://validmind.com/legal/" class="footer-company-legal external" target="_blank" rel="noopener">Legal</a></div>
+              </div>
+            </div>
+          </div>
+    center:
+      - text: |
+          <div class="footer-section footer-user-guides">
+            <div class="footer-heading">Guides</div>
+            <div class="footer-user-guides-columns">
+              <ul class="footer-user-guides-column-1">
+                <li><a href="/get-started/get-started.qmd">Get started</a></li>
+                <li><a href="/guide/guides.qmd#configuration">Configuration</a></li>
+                <li><a href="/guide/guides.qmd#model-inventory">Model inventory</a></li>
+              </ul>
+              <ul class="footer-user-guides-column-2">
+                <li><a href="/guide/guides.qmd#model-documentation">Model documentation</a></li>
+                <li><a href="/guide/guides.qmd#model-validation">Model validation</a></li>
+                <li><a href="/guide/guides.qmd#model-workflows">Model workflows</a></li>
+              </ul>
+              <ul class="footer-user-guides-column-3">
+                <li><a href="/guide/guides.qmd#reporting">Reporting</a></li>
+                <li><a href="/guide/guides.qmd#monitoring">Monitoring</a></li>
+                <li><a href="/guide/guides.qmd#attestation">Attestation</a></li>
+              </ul>
+            </div>
+          </div>
+      - text: |
+          <div class="footer-section">
+            <div class="footer-heading">Library</div>
+            <ul>
+              <li><a href="/developer/validmind-library.qmd#for-model-development">For developers</a></li>
+              <li><a href="/developer/validmind-library.qmd#for-model-validation">For validators</a></li>
+              <li><a href="/developer/validmind-library.qmd#try-the-code-samples">Code samples</a></li>
+              <li><a href="/validmind/validmind.qmd">API Reference</a></li>
+            </ul>
+          </div>
+      - text: |
+          <div class="footer-section">
+            <div class="footer-heading">Training</div>
+            <ul>
+              <li><a href="/training/program/learning-paths.qmd">Learning paths</a></li>
+              <li><a href="/training/training.qmd#available-courses">Courses</a></li>
+              <li><a href="/training/training.qmd#available-videos">Videos</a></li>
+            </ul>
+          </div>
+      - text: |
+          <div class="footer-section">
+            <div class="footer-heading">Support</div>
+            <ul>
+              <li><a href="/support/troubleshooting.qmd">Troubleshooting</a></li>
+              <li><a href="/faq/faq.qmd">FAQ</a></li>
+              <li><a href="/support/support.qmd">Get help</a></li>
+            </ul>
+          </div>
+      - text: |
+          <div class="footer-section">
+            <div class="footer-heading">Community</div>
+            <ul>
+              <li><a href="/about/contributing/join-community.qmd" target="_blank">Slack</a></li>
+              <li><a href="https://github.com/validmind/documentation">Github</a></li>
+              <li><a href="https://validmind.com/blog/">Blog</a></li>
+            </ul>
+          </div>
+    right: |
 
 format:
   html:
     grid:
       body-width: 1000px
-      sidebar-width: 375px
     footnotes-hover: true
     reference-location: margin
     code-overflow: wrap
     code-annotations: below
-    theme: 
+    theme:
       light: [cosmo, theme.scss]
-#      dark: [cosmo, theme-dark.scss]
+    # dark: [cosmo, theme-dark.scss]
     mainfont: Inter
     css: styles.css
     toc: true
