Address my own would-be review comments

--- a/site/_variables.yml
+++ b/site/_variables.yml
@@ -24,6 +24,7 @@ validmind:
   training: "ValidMind Academy"
   customer: "Customer-managed ValidMind"
   admin: "ValidMind Admin UI"
+  checker: "Document Checker"
 
 
 
@@ -36,6 +37,7 @@ vm:
   api: "Python API"
   customer: "CMVM"
   admin: "admin UI"
+  checker: "checker"
 
 # PRODUCT URLS
 # Links to ValidMind hosted web applications
