Fix favicon and fake tour logo

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -13,7 +13,7 @@ website:
   announcement: 
     content: '[**{{< fa book-open-reader >}} EU AI Act Compliance**](https://validmind.com/download-whitepaper-the-eu-ai-act/) — Read our original regulation brief on how the EU AI Act aims to balance innovation with safety and accountability, setting standards for responsible AI use'
     position: above-navbar 
-  favicon: validmind.png
+  favicon: favicon.svg
   title: "ValidMind"
   cookie-consent:
     type: express
