Re-add make generate-sitemap action

--- a/.github/workflows/validate-docs-site.yaml
+++ b/.github/workflows/validate-docs-site.yaml
@@ -60,6 +60,7 @@ jobs:
           cat render_errors.log;
           exit 1;
           }
+          make generate-sitemap
 
     # See if site/notebooks/ has updates
     # Checks the current PR branch against the target branch
