Add installation branch ref

--- a/.github/workflows/validate-docs-site.yaml
+++ b/.github/workflows/validate-docs-site.yaml
@@ -22,6 +22,7 @@ jobs:
       with:
         repository: validmind/installation
         path: site/_source/installation
+        ref: nrichers/sc-11173/documentation-for-simple-idp-auth-mode
         token: ${{ secrets.INSTALLATION_RO_PAT }}
 
     - name: Check out release-notes repository
