--- a/site/guide/_sidebar.yaml
+++ b/site/guide/_sidebar.yaml
@@ -60,6 +60,7 @@ website:
         - text: "Templates"
         - file: guide/templates/working-with-templates.qmd
           contents:
+          - guide/templates/manage-document-types.qmd
           - guide/templates/view-documentation-templates.qmd
           - guide/templates/customize-documentation-templates.qmd
           - guide/templates/swap-documentation-templates.qmd
