--- a/site/guide/_sidebar.yaml
+++ b/site/guide/_sidebar.yaml
@@ -58,9 +58,11 @@ website:
         - guide/model-inventory/view-model-activity.qmd
         - text: "---"
         - text: "Templates"
-        - file: guide/templates/working-with-templates.qmd
+        - file: guide/templates/working-with-model-documents.qmd
           contents:
           - guide/templates/manage-document-types.qmd
+        - file: guide/templates/working-with-templates.qmd
+          contents:
           - guide/templates/view-document-templates.qmd
           - guide/templates/customize-document-templates.qmd
           - guide/templates/swap-document-templates.qmd
