--- a/site/guide/_sidebar.yaml
+++ b/site/guide/_sidebar.yaml
@@ -61,11 +61,12 @@ website:
         - file: guide/templates/working-with-model-documents.qmd
           contents:
           - guide/templates/manage-document-types.qmd
+          - guide/templates/manage-model-documents.qmd
         - file: guide/templates/working-with-templates.qmd
           contents:
-          - guide/templates/view-document-templates.qmd
+          # - guide/templates/view-document-templates.qmd
           - guide/templates/customize-document-templates.qmd
-          - guide/templates/swap-document-templates.qmd
+          - guide/templates/manage-document-templates.qmd
         - guide/templates/manage-text-block-library.qmd
         - text: "---"
         - text: "Model Documentation"
