--- a/site/guide/_sidebar.yaml
+++ b/site/guide/_sidebar.yaml
@@ -62,9 +62,9 @@ website:
           contents:
           - guide/templates/manage-document-types.qmd
           - guide/templates/manage-model-documents.qmd
-        - file: guide/templates/working-with-templates.qmd
+        - text: "Working with templates"
+          file: guide/templates/working-with-templates.qmd
           contents:
-          # - guide/templates/view-document-templates.qmd
           - guide/templates/customize-document-templates.qmd
           - guide/templates/manage-document-templates.qmd
         - guide/templates/manage-text-block-library.qmd
