Editing: Check for compliance

--- a/site/guide/_sidebar.yaml
+++ b/site/guide/_sidebar.yaml
@@ -78,7 +78,8 @@ website:
           - guide/model-documentation/work-with-test-results.qmd
           - text: "Assign section statuses"
             file: guide/model-documentation/assign-documentation-section-statuses.qmd
-          - guide/model-documentation/check-documents-for-compliance.qmd
+          - text: "Check for compliance"
+            file: guide/model-documentation/check-documents-for-compliance.qmd
           - guide/model-documentation/collaborate-with-others.qmd
           - guide/model-documentation/submit-for-approval.qmd
         - text: "---"
