Rough in placeholders

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -9,6 +9,7 @@ metadata-files:
   - validmind/_sidebar.yml
   - releases/_sidebar.yaml
   - installation/_sidebar.yaml
+  - reference/_sidebar.yaml
 
 website:
   announcement: 
