Add REST API to navbar menu, text tweaks, start CSS file

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -56,6 +56,8 @@ website:
           file: support/support.qmd
         - text: "{{< fa bullhorn >}} Releases"
           file: releases/all-releases.qmd
+        - text: "{{< fa book >}} REST API"
+          file: reference/rest-api-reference.qmd
         - text: "---"
         - text:  "{{< fa cube >}} Python Library"
         - text: "{{< fa code >}} {{< var validmind.developer >}}"
@@ -94,6 +96,8 @@ website:
           file: support/support.qmd
         - text: "{{< fa bullhorn >}} Releases"
           file: releases/all-releases.qmd
+        - text: "{{< fa book >}} REST API"
+          file: reference/rest-api-reference.qmd
         - text: "---"
         - text:  "{{< fa cube >}} Python Library"
         - text: "{{< fa code >}} {{< var validmind.developer >}}"
