--- a/site/reference/_sidebar.yaml
+++ b/site/reference/_sidebar.yaml
@@ -2,7 +2,7 @@ website:
     sidebar:
       - id: reference
         contents: 
-          - text: "{{< fa book >}} Reference"
-          - reference/rest-api-reference.qmd
+          - text: "REST API Reference"
+            file: reference/rest-api-reference.qmd
           - reference/vm-api.qmd
           - reference/admin-api.qmd
