Save point for look & feel tweaks

--- a/site/reference/_sidebar.yaml
+++ b/site/reference/_sidebar.yaml
@@ -4,5 +4,7 @@ website:
         contents: 
           - text: "REST API Reference"
             file: reference/rest-api-reference.qmd
-          - reference/vm-api.qmd
-          - reference/admin-api.qmd
+          - text: "{{< var vm.product >}} API"
+            file: reference/vm-api.qmd
+          - text: "{{< var vm.product >}} Admin API"
+            file: reference/admin-api.qmd
