New access section

--- a/site/guide/_sidebar.yaml
+++ b/site/guide/_sidebar.yaml
@@ -5,11 +5,13 @@ website:
       contents:
         - guide/guides.qmd
         - text: "---"
-        - text: "Configuration"
+        - text: "Access"
         - file: guide/configuration/accessing-validmind.qmd
           contents:
             - guide/configuration/register-with-validmind.qmd
             - guide/configuration/log-in-to-validmind.qmd
+        - text: "---"
+        - text: "Configuration"
         - file: guide/configuration/managing-your-organization.qmd
           contents:
             - guide/configuration/set-up-your-organization.qmd
